# sitekt

./: .gitignore  .pylintrc  Dockerfile  README.md  build.sh  custom_settings.py  custom_settings_overrides.py  django-cate.code-workspace  manage.py  mkdocs.yml  nginx.conf  pyproject.toml  requirements.txt  vercel.json
api/: app.py  backup.py
aumonerie/: admin.py  apps.py  management.py  models.py  views.py
calendrier_avent_2022/: admin.py  apps.py  models.py
calendrier_avent_2023/: models.py  views.py
calendrier_avent_2024/: models.py  urls.py
calendrier_avent_2025/: admin.py  apps.py  models.py  urls.py  views.py
cate/: .gitignore  asgi.py  context_processors.py  custom_settings.py  middleware.py  password_validation.py  settings.py  sitemap.py  tests.py  urls.py  views.py  widgets.py  wsgi.py
common/: admin.py  apps.py  fields.py  forms.py  management.py  middleware.py  migration_helpers.py  models.py  test_articles.py  test_children.py  test_dates.py  test_pages.py  test_utils.py  test_years.py  urls.py  utils.py  views.py  widgets.py
debug/: client.py
docs/: .accounts.md  .index.md  index.md
espacecate/: admin.py  apps.py  context_processors.py  models.py  test_childs.py  test_dates.py  views.py
old_website/: apps.py  urls.py  views.py
scripts/: __init__.py  common.py  create_settings.py  fetch.py  get_fonts.py  get_holidays.py  serve.py  setup.py  utils.py
storage/: blob.py  fields.py  filename_hash.py
tracking/: cache.py  models.py  views.py
users/: adapter.py  admin.py  models.py
uservisit/: admin.py  settings.py
(+416 files in other folders)
