[project]
name = "sitekt"
version = "0.1.0"
description = "Site du caté"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4 ~= 4.12",
    "dj-database-url ~= 2.2",
    "Django ~= 5.1",
    "django-admin-sortable2 ~= 2.1",
    "django-allauth[socialaccount] ~= 65.3",
    "django-cleanup ~= 8.0",
    "django-debug-toolbar ~= 4.2",
    "django-phonenumber-field[phonenumberslite] ~= 8.1",
    "django_simple_redirects ~= 2.2",
    "docutils ~= 0.21",
    "easy-thumbnails ~= 2.10",
    "fpdf2 ~= 2.8",
    "icalendar ~= 6.3",
    "minify-html ~= 0.11",
    "python-dateutil ~= 2.9",
    "requests ~= 2.32",
    "sentry-sdk ~= 2.19",
    "Unidecode ~= 1.3",
    "user-agents ~= 2.2",
]

[project.optional-dependencies]
dev = ["python-dotenv ~= 1.0"]
docs = ["markdown-include ~= 0.8", "mkdocs-material ~= 9.6", "mkdocs-minify-plugin ~= 0.8"]
linting = ["ruff ~= 0.13"]
test = ["coverage ~= 7.10", "tblib ~= 3.1"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 50
precision = 2
skip_covered = true

[tool.ruff]
line-length = 120
